--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@
 body{
     margin: 0 auto;
     overflow-x: hidden;
+    background-color: #1A1A1A;
+    color: white;
+    font-family: "Montserrat", monospace;
 }
 
 header{
-    background-color: #1A1A1A;
-    color: white;
     font-family: 'Montserrat', sans-serif;
     display: flex;
     width: 100vw;
@@ -23,17 +24,17 @@ header h1{
     margin-top: 39vh;
     margin-left: 28vw;
     font-size: 5rem;
-    font-weight: 300;
+    font-weight: 400;
 }
 
-.highlight{
-    height: 60px;
+#highlight{
+    height: 180px;
     width: 370px;
-    margin-left: 28vw;
+    margin-left: 27.5vw;
     background-color: #1E6D91;
     opacity: 47%;
     position: absolute;
-    bottom: 39vh;
+    bottom: 42vh;
     transition: height 0.5s;
 }
 
@@ -48,28 +49,103 @@ nav{
 
 #to-do-list:hover {
     text-decoration: underline;
-    color: #60C9E1;
+    color: #1E6D91;
     cursor: grab;
 }
 
 #weather-app:hover {
     text-decoration: underline;
-    color: #60C9E1;
+    color: #1E6D91;
     cursor: grab;
 }
 
 #image-gallery:hover {
     text-decoration: underline;
-    color: #60C9E1;
+    color: #1E6D91;
     cursor: grab;
 }
 
 #recipe-finder:hover {
     text-decoration: underline;
-    color: #60C9E1;
+    color: #1E6D91;
     cursor: grab;
 }
 
+.about-me {
+    height: 100vh;
+    width: 100vw;
+    padding-top: 200px;
+    font-weight: 300;
+}
 
+.about-me .intro {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
 
+.about-me h1 {
+    font-size: 3.5rem;
+    font-weight: 400;
+}
 
+.about-me h2 {
+    font-weight: 300;
+}
+
+.about-me h3{
+    font-weight: 300;
+}
+
+.about-me .box{
+    display: flex;
+    font-weight: 300;
+}
+
+.about-me .background-info{
+    margin-top: 10px;
+    margin-left: 340px;
+    margin-right: 50px;
+    background-color: #245F7A;
+    padding: 25px;
+    width: 1440px;
+    border-radius: 30px;
+}
+
+.about-me .future-goals{
+    margin-top: 10px;
+    margin-right: 340px;
+    background-color: #245F7A;
+    padding: 40px 25px;
+    width: 1440px;
+    border-radius: 30px;
+}
+
+.about-me .ending{
+    margin-top: 40px;
+    margin-left: 405px;
+    font-weight: 300;
+}
+
+.hidden{
+    opacity: 0;
+    transition: all 1s;
+}
+
+@media(prefers-reduced-motion){
+    .hidden{
+        transition: none;
+    }
+}
+
+.show{
+    opacity: 1;
+}
+
+.info:nth-child(2){
+    transition-delay: 200ms;
+}
+
+.info:nth-child(3){
+    transition-delay: 800ms;
+}
